# Voyager

./: .gitignore  CHANGELOG.md  README.md  SETUP.md  index.html  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  vite.config.js
.github/workflows/: deploy-pwa.yml  release.yml
assets/: index-BAuiiSph.js  index-CZeIyzB6.js  index-D45CEloR.js  index-D8sNo7U5.js  index-DCVXpGGC.js  index-DM1pLBTD.js  index-DspZHS41.js  index-DvOma44a.js  index-quDwQb6G.js  index-v17IZKhk.js
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: LandingPage.jsx  LicenseGate.jsx
src/lib/: licensing.js
