[package]
name    = "voyager"
version = "1.0.0"
description = "Voyager – Travel Planner & Budget Tracker"
authors     = []
license     = ""
repository  = ""
edition     = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde      = { version = "1.0", features = ["derive"] }
tauri      = { version = "1.5", features = ["shell-open"] }

[features]
# This feature is used for production builds or when a dev server is not specified.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
